@jancborchardt's Share via link suggestion: move to bottom of share dialogue implemented; minor style fixes; disclaimer about sharing visibility added

--- a/css/linkshare.css
+++ b/css/linkshare.css
@@ -106,6 +106,10 @@
 .shared-with-list > li.stub {
   display:none;
 }
+.shared-with-list > li:last-child {
+  margin-bottom:0.5em;
+}
+
 /* that's just a stub to be used by JS later, hid it! */
 .shared-with-list > li.stub {
   display:none;
